2007-07-03  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bump the version to 0.1.5 now that
	  0.1.4 has been released.

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, NEWS: Update the version

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceLocator.cs, src/Makefile.am, data/images/blankphoto.png,
	  data/images/Makefile.am: added blank photo

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TargetWindow.cs, src/SendingHandler.cs, src/TargetService.cs,
	  giver.mdp: Added Bitch'n events

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	updated the image

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	changes for PhotoService

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added AvatarUpdated event

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	removed debug messages

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	started and stopped the PhotoService

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added PhotoService

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/Application.cs, src/TransferStatusArgs.cs:
	  Events

2007-06-29  Brady Anderson <brady.anderson@gmail.com> 

	added PhotoService to the project

2007-06-29  Scott Reeves <sreeves@novell.com> 

	* src/TrayPopupWindow.cs: Add initial popup widow

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* src/TargetService.cs: Stubbed out a ProgressBar and ProgressLabel. 
	  Commented-out the handlers.

2007-06-29  Scott Reeves <sreeves@novell.com> 

	* src/Application.cs, src/Makefile.am: add start of popup status
	  message. Patch from Travis Hansen

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs, src/Makefile.am, src/TransferStatusArgs.cs,
	  giver.mdp: Added TransferStatusArgs

2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: ReadOnly file transfers
	* src/RequestHandler.cs: Fixed the readonly file stuff